--- a/with_functions/src/index.css
+++ b/with_functions/src/index.css
@@ -57,7 +57,7 @@
 
 /*----------todo- list and item style-----------*/
 
-ul {
+ol {
   list-style: none;
   padding: 0;
   margin-top: 8%;
@@ -100,11 +100,18 @@ p {
   margin-left: 3%;
 }
 
-i {
+button {
   margin-left: auto;
   margin-right: 1%;
   color: red;
   font-size: 20px;
+  cursor: pointer;
+  border: none;
+  background: none;
+}
+
+button:focus {
+  outline: none;
 }
 
 .completed .todo-text {
