--- a/with_classes/src/index.css
+++ b/with_classes/src/index.css
@@ -101,10 +101,16 @@ p {
 }
 
 i {
-  margin-left: auto;
   margin-right: 1%;
   color: red;
   font-size: 20px;
+}
+
+button {
+  margin-left: auto;
+  border: none;
+  outline: none;
+  padding: 0;
 }
 
 .completed .todo-text {
